--- a/hw03-spring-boot/src/main/resources/i18n/messages_es_ES.properties
+++ b/hw03-spring-boot/src/main/resources/i18n/messages_es_ES.properties
@@ -2,7 +2,7 @@ ResultService.test.results=Resultados de la prueba:
 ResultService.student=Estudiante: {0}
 ResultService.answered.questions.count=Recuento de preguntas respondidas: {0}
 ResultService.right.answers.count=Recuento de respuestas correctas: {0}
-ResultService.passed.test=¡Felicitaciones! ¡Pasaste la prueba!
+ResultService.passed.test=Felicitaciones! Pasaste la prueba!
 ResultService.fail.test=Lo siento. No pasas la prueba.
 StudentService.input.first.name=Por favor ingrese su nombre
 StudentService.input.last.name=Por favor ingrese su apellido
